# cleancoin

./: CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
build_msvc/: .gitignore  README.md  bitcoin.sln  bitcoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: test_run_all.sh
contrib/: README.md  bitcoin-pos-cli.bash-completion  bitcoin-pos-qt.pro  bitcoin-pos-tx.bash-completion  bitcoin-posd.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  bitcoin-pos-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-wallet.1  bitcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  addrdb.cpp  (+154 more)
(+1131 files in other folders)
