dist_man1_MANS=

if BUILD_CleanCoinD
  dist_man1_MANS+=CleanCoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=CleanCoin-qt.1
endif

if BUILD_CleanCoin_CLI
  dist_man1_MANS+=CleanCoin-cli.1
endif

if BUILD_CleanCoin_TX
  dist_man1_MANS+=CleanCoin-tx.1
endif

if ENABLE_WALLET
if BUILD_CleanCoin_WALLET
  dist_man1_MANS+=CleanCoin-wallet.1
endif
endif
